--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "scripts": {
     "start": "node index.js",
-    "backend": "nodemon index.js",
+
     "frontend": "npm run front --prefix client",
-   "dev": "concurrently \"npm run backend\"  \"npm run start --prefix client\" ",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "backend": "nodemon index.js",
+   "dev": "concurrently \"npm run backend\"  \"npm run start --prefix client\" "
   },
   "author": "suraj",
   "license": "ISC",
